Fix button spacing in datagrid top

--- a/less/modules/datagrid.less
+++ b/less/modules/datagrid.less
@@ -197,6 +197,10 @@
 		width: 220px;
 		border-top: 1px solid @white;
 	}
+	.btn:nth-last-child(1) {
+		margin-left: 16px;
+		margin-right: 0px;
+	}
 }
 
 .pickingslips-table {
