--- a/less/modules/product.less
+++ b/less/modules/product.less
@@ -527,16 +527,6 @@
 		margin: 9px 0 0 10px;
 	}
 }
-
-.product-manage- {
-	.datagrid-top {
-		.btn:nth-last-child(1) {
-			margin-left: 16px;
-			margin-right: 0px;
-		}
-	}
-}
-
 #product_fieldset_google_categories {
 	margin-top: 10px;
 }
